fixes for scrollbar

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -91,3 +91,20 @@ main {
   outline: 0;
   outline-offset: 0;
 }
+
+body::-webkit-scrollbar {
+  width: 12px;
+  &-thumb {
+    border-radius: 5px;
+    background-color: var(--color-orange);
+  }
+  &-track {
+    background-color: var(--color-white);
+  }
+  &-corner {
+    display: none;
+  }
+}
+body.dark-theme::-webkit-scrollbar-track {
+  background-color: var(--color-grey-2);
+}
